# gnu_halevt

./: .gitignore  AUTHORS  ChangeLog  Config.py  DbusObject.py  Makefile.am  NEWS  ObjectSet.py  README  TODO  bootstrap.sh  configure.ac  dbusevt.py  halevt-initscript  halevt.spec.in  halevt.xml
config/: git-log-Changelog.sh  gitlog-to-changelog
doc/: Makefile.am  Makefile.in  halevt-mount.1.in  halevt-umount.1  halevt.1.in  halevt.texi  hvmount.1.in
doc/references/: Makefile.am  halevt-mount.1.html  halevt-umount.1.html  halevt.1.html  halevt.html  hvmount.1.html
dtd/: configuration.dtd
examples/: Makefile.am  automatic_mount_with_hvmount.xml  automatic_sync_mount.xml  halevt_umount_from_tray-gtkdialog.sh  halevt_umount_from_tray-xmessage.sh  halevt_umount_from_tray.sh  halevt_umount_report.sh  mtpfs.xml  popper_notifications.xml  sample.conf.xml  umount_from_tray-gtkdialog.xml  umount_from_tray-xmessage.xml  umount_from_tray.xml  use_label_as_mountpoint.xml
halevt-mount/: Makefile.am  halevt-mount.c
halevt-mount/po/: Makevars  POTFILES.in  fr.po
m4/: ChangeLog
po/: ChangeLog  POTFILES.in  fr.po
scripts/: Makefile.am  hvmount.in
src/: Makefile.am  common.h  debug.c  devices_list.c  devices_list.h  hal_interface.c  hal_interface.h  manager.c  match.c  match.h  parse_config.c  parse_config.h
xsl/: comparator.xsl  idref2ref.xsl
