EXTRA_DIST = mtpfs.xml popper_notifications.xml use_label_as_mountpoint.xml \
 umount_from_tray-gtkdialog.xml umount_from_tray-xmessage.xml \
 automatic_mount_with_hvmount.xml automatic_sync_mount.xml

dist_bin_SCRIPTS = halevt_umount_report.sh \
 halevt_umount_from_tray-gtkdialog.sh halevt_umount_from_tray-xmessage.sh
